updated the docs
