# swagger.json
@@ -1,7 +1,7 @@
 {
   "info": {
     "title": "Lab Helpers",
-    "version": "1.5.0",
+    "version": "1.6.0",
     "description": "API que acompaña a Ansible Tower para levantar ambientes de desarrollo durante los workshops de DevOps 101 de Conatel, y otras instancias."
   },
   "consumes": [
@@ -67,7 +67,8 @@
               "application/json": {
                 "files": "/api/v1/files/",
                 "uploads": "/api/v1/uploads/",
-                "documents": "/api/v1/documents/"
+                "documents": "/api/v1/documents/",
+                "jobs": "/api/v1/jobs/"
               }
             }
           },
@@ -460,6 +461,160 @@
         }
       }
     },
+    "/api/v1/jobs/launch/:name/": {
+      "post": {
+        "summary": "Corre un `job_template` en el servidor de AWX o Ansible Tower.",
+        "description": "Endpoint para lanzar un `template` en el servidor. En la respuesta se incluye toda la información para interactuar con este trabajo. Por ejemplo: cancelar, relanzar, y ver en tiempo real su ejecución.",
+        "parameters": [
+          {
+            "in": "params",
+            "name": "name",
+            "type": "string",
+            "minimum": 1,
+            "maximum": 1,
+            "description": "Nombre del `template` en AWX."
+          },
+          {
+            "in": "body",
+            "required": true,
+            "name": "extra_vars",
+            "description": "Objeto JSON con las variables necesarias para correr el `template`.",
+            "schema": {
+              "$ref": "#/definitions/AnyObject"
+            }
+          }
+        ],
+        "security": [
+          {
+            "JWTTokenAuthentication": []
+          }
+        ],
+        "tags": [
+          "jobs"
+        ],
+        "responses": {
+          "200": {
+            "description": "Detalles sobre la ejecución del `playbook`.",
+            "schema": {
+              "$ref": "#/definitions/Job"
+            }
+          },
+          "400": {
+            "$ref": "#/responses/Error"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/api/v1/jobs/stdout/:id/": {
+      "get": {
+        "summary": "Detiene la ejecución del `job`.",
+        "description": "Devuelve la salida en distintos formatos de la ejecución del `job`. Los formator permitidos son: `html`, `txt`, `ansi`, `json`, `txt_download`, `ansi_download`. También se puede indicar si se quiere la versión con fondo oscuro o no a través de la opción `dark` que puede tomar valores de `1` para si y `0` para no. Su valor por defecto es `1`.",
+        "parameters": [
+          {
+            "in": "params",
+            "name": "id",
+            "type": "string",
+            "minimum": 1,
+            "maximum": 1,
+            "description": "ID del `job`."
+          },
+          {
+            "in": "query",
+            "name": "format",
+            "type": "string",
+            "enum": [
+              "html",
+              "txt",
+              "txt_download",
+              "ansi",
+              "ansi_download",
+              "json"
+            ],
+            "description": "Formato en el que se descargara la salida del `playbook`."
+          }
+        ],
+        "security": [
+          {
+            "JWTTokenAuthentication": []
+          }
+        ],
+        "tags": [
+          "jobs"
+        ],
+        "responses": {
+          "200": {
+            "description": "Stream de ejecución del `job` en el formato especificado.",
+            "produces": [
+              "text/html; charset=utf-8"
+            ]
+          },
+          "400": {
+            "$ref": "#/responses/Error"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/api/v1/jobs/cancel/:id/": {
+      "get": {
+        "summary": "Reinicia la ejecución del `job`",
+        "parameters": [
+          {
+            "in": "params",
+            "name": "id",
+            "type": "string",
+            "minimum": 1,
+            "maximum": 1,
+            "description": "ID del `job`."
+          }
+        ],
+        "security": [
+          {
+            "JWTTokenAuthentication": []
+          }
+        ],
+        "tags": [
+          "jobs"
+        ],
+        "responses": {
+          "200": {
+            "description": "Estado del `job`.",
+            "schema": {
+              "$ref": "#/definitions/Job"
+            }
+          },
+          "400": {
+            "$ref": "#/responses/Error"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      }
+    },
     "/api/v1/uploads/text/": {
       "post": {
         "summary": "Almacena un archivo de texto en el servidor.",
@@ -801,6 +956,90 @@
         },
         "filename": {
           "$ref": "#/definitions/FileName"
+        }
+      }
+    },
+    "JobData": {
+      "type": "object",
+      "description": "Detalle sobre un `job` de AWS o AnsibleTower",
+      "properties": {
+        "description": {
+          "type": "string",
+          "description": "Descripción del `job`.",
+          "example": "Destruye un POD"
+        },
+        "extra_vars": {
+          "$ref": "#/definitions/AnyObject"
+        },
+        "name": {
+          "type": "string",
+          "description": "Nombre del `job`.",
+          "example": "Lab Pod - Down"
+        },
+        "playbook": {
+          "type": "string",
+          "description": "Nombre del `playbook` que el `job` esta ejecutando.",
+          "example": "pod_down.yml"
+        }
+      }
+    },
+    "JobRelatedLinks": {
+      "type": "object",
+      "description": "Lista de links relacionados con el `job`.",
+      "properties": {
+        "activity_stream": {
+          "type": "string",
+          "description": "URL para acceder al `activity_stream` del `job`.",
+          "pattern": "^(/[^/ ]*)+/?$",
+          "example": "/helpers/api/v1/jobs/activity_stream/cjnn9z2970000zptca25ygpsi/"
+        },
+        "cancel": {
+          "type": "string",
+          "description": "URL para cancelar la ejecución del `job`.",
+          "pattern": "^(/[^/ ]*)+/?$",
+          "example": "/helpers/api/v1/jobs/cancel/cjnn9z2970000zptca25ygpsi/"
+        },
+        "stdout": {
+          "type": "string",
+          "description": "URL para acceder a la salida de la ejecución del `job`.",
+          "pattern": "^(/[^/ ]*)+/?$",
+          "example": "/helpers/api/v1/jobs/stdout/cjnn9z2970000zptca25ygpsi/"
+        },
+        "relaunch": {
+          "type": "string",
+          "description": "URL para volver a lanzar la ejecución del `job`.",
+          "pattern": "^(/[^/ ]*)+/?$",
+          "example": "/helpers/api/v1/jobs/relaunch/cjnn9z2970000zptca25ygpsi/"
+        }
+      }
+    },
+    "Job": {
+      "type": "object",
+      "description": "Descripción de un `job` de AWX o Ansible Tower.",
+      "properties": {
+        "created": {
+          "$ref": "#/definitions/CreatedDate"
+        },
+        "data": {
+          "$ref": "#/definitions/JobData"
+        },
+        "id": {
+          "$ref": "#/definitions/ID"
+        },
+        "type": {
+          "type": "string",
+          "enum": [
+            "jobs"
+          ]
+        },
+        "related": {
+          "$ref": "#/definitions/JobRelatedLinks"
+        },
+        "url": {
+          "$ref": "#/definitions/DocumentURL"
+        },
+        "updated": {
+          "$ref": "#/definitions/UpdatedDate"
         }
       }
     },
